# GraphRAG-IAC

./: .gitignore  README.md  all_animals_web_scraping.ipynb  all_animals_web_structure.md  animals.txt  animals_subset.md  graph.md  great_white_shark.md  green_anaconda.md  ideas.md  platypus.md  pyproject.toml  questions.md
.github/workflows/: create-milestone-issues.yml
animals_info/: kangaroo.md  ostrich.md
data/: albatross.md  alligator.md  alpaca.md  ant.md  antelope.md  ape.md  armadillo.md  baboon.md  badger.md  bat.md  bear.md  beaver.md  bee.md  beetle.md  benchmark_data.csv  binturong.md  bison.md  bobcat.md  bull.md  butterfly.md  camel.md  cat.md  cattle.md  cheetah.md  chicken.md  chinchilla.md  chough.md  cobra.md  cockroach.md  cod.md  common merganser.md  common_merganser.md  cormorant.md  cow.md  crab.md  crane.md  crane_(bird).md  crocodile.md  crow.md  deer.md  (+153 more)
graphrag/: config.py
graphrag/agents/: __init__.py  answer_critic.py  retriever_router.py  retriever_tools.py
graphrag/evaluation/: evaluator.py
graphrag/graph/: neo4j_manager.py
graphrag/ingestion/: entity_extractor.py  graph_cleaner.py  hypothetical_question_generator.py  ingestion.py  processed_animals.txt  text_processor.py
graphrag/llm/: gemini_client.py  ollama_client.py
graphrag/utils/: chunking.py  (+1 more)
notebooks/: .env  .env.example  01_ingestion_demo.ipynb  02_retrieval_demo.ipynb  03_evaluation_demo.ipynb  chunking.ipynb  sample.ipynb
notes/: notes_16_02_2026.md  notes_23_02_2026.md
scraping/: all_animals_web_scraping.ipynb  species.txt  wikipedia_animals_scraping.ipynb
(+114 files in other folders)
