[project]
name = "graphrag-iac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "ipykernel>=7.2.0",
    "neo4j>=6.1.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
