[project]
name = "graphrag-iac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "google>=3.0.0",
    "google-genai>=1.69.0",
    "ipykernel>=7.2.0",
    "langchain-text-splitters>=1.1.1",
    "neo4j>=6.1.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "wikipedia-api>=0.9.0",
    "sentence-transformers>=5.4.1",
]
